css mejorado y csv to xml

--- a/Client/frontend/web/templates/data.html
+++ b/Client/frontend/web/templates/data.html
@@ -4,6 +4,10 @@
     h5{
       background: cornsilk;
     }
+    input{
+      background: #76B3DB;
+    }
+    
   </style>
   <head>
     <meta charset="UTF-8" />
